// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete.md all off processor: delete.md 1`] = `
~~abc123~~

~~我a我1~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~abc123~~

~~我 a 我 1~~

`;

exports[`delete.md all off processor: delete.md 2`] = `
~~abc123~~

~~我a我1~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~abc123~~

~~我 a 我 1~~

`;

exports[`delete.md: delete.md 1`] = `
~~abc123~~

~~我a我1~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~abc123~~

~~我 a 我 1~~

`;

exports[`delete.md: delete.md 2`] = `
~~abc123~~

~~我a我1~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~abc123~~

~~我a我1~~

`;
